--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image with Buildpacks.io and paketo-buildpacks
+name: Build and Push Docker Image with Buildpacks.io
 
 on:
   push:
