--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,6 +14,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up pack CLI
         uses: docker/setup-buildx-action@v1
+      - name: Install Pack CLI
+        run: |
+          add-apt-repository ppa:cncf-buildpacks/pack-cli
+          apt-get update
+          apt-get install pack-cli
       - name: Build app with Buildpacks.io and paketo-buildpacks
         run: pack build ohiani/test:latest --builder paketobuildpacks/builder:base --buildpacks paketobuildpacks/nodejs --buildpacks paketobuildpacks/nginx --path .
       - name: Log in to Docker registry
