--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Log in to Docker registry
         uses: docker/login-action@v1
         with:
-          registry: https://login.docker.com/u/login/
+          registry: https://login.docker.com/u/login
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push Docker image to registry
