--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,6 +21,8 @@ jobs:
           sudo apt-get install pack-cli
       - name: Build app with Buildpacks.io and paketo-buildpacks
         run:  sudo pack build momoh-test --builder paketobuildpacks/builder:full
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Log in to Docker registry
         uses: docker/login-action@v1
         with:
